<resources>
    <string name="app_name">Exercise 1</string>
    <string name="temail">Masukkan Email</string>
    <string name="tpassword">Masukkan Password</string>
    <string name="blogin">Login</string>
    <string name="bregester">Sign in</string>
    <string name="Lihatdata">Lihat data</string>
    <string name="Lihatnomor">Lihat Nomor</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail kontak</string>
    <string name="nama">Nama</string>
    <string name="notelp">Nomor Telpon</string>
    <string name="todo">TODO</string>
</resources>